--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,42 @@
 {
   "root": true,
   "parser": "babel-eslint",
-  "extends": "airbnb",
+  "extends": [
+    "airbnb"
+  ],
   "env": {
-  "browser": true
+    "browser": true
   },
   "rules": {
-    "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
+    "arrow-body-style": "off",
+    "semi": [
+      2,
+      "never"
+    ],
+    "max-len": [
+      1,
+      100,
+      2,
+      {
+        "ignoreComments": true
+      }
+    ],
+    "no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true,
+        "allowTernary": true
+      }
+    ],
     "no-plusplus": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["./webpack.config.js"]}],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "./webpack.config.js"
+        ]
+      }
+    ],
     "react/forbid-prop-types": "off",
     "react/jsx-filename-extension": "off",
     "react/no-array-index-key": "off"
