--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-bootstrap": "0.32.1"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-dom": "4.2.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.2",
@@ -35,15 +35,12 @@
     "babel-preset-stage-1": "6.24.1",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "2.0.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
-    "html-loader": "^0.5.5",
-    "install": "^0.11.0",
-    "npm": "^6.0.0",
-    "uninstall": "0.0.0",
-    "url-loader": "^0.6.2",
+    "html-loader": "0.5.5",
+    "url-loader": "0.6.2",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.8.2"
   }
