--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "prop-types": "15.6.0",
     "react": "16.0.0",
+    "react-bootstrap": "0.32.1",
     "react-dom": "16.0.0",
-    "react-router-dom": "4.2.2",
     "react-grid-gallery": "0.4.8",
     "react-icons": "2.2.7",
     "react-router": "4.2.0",
     "react-router-bootstrap": "0.24.4",
-    "react-scripts": "1.1.0",
-    "react-bootstrap": "0.32.1"
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.1.0"
   },
   "devDependencies": {
     "@types/react-router-dom": "4.2.6",
