--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
     "html-loader": "0.5.5",
+    "react-social-icons": "3.0.0",
     "url-loader": "0.6.2",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.8.2"
