--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "4.2.0",
     "react-router-bootstrap": "0.24.4",
     "react-router-dom": "4.2.2",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.0"
   },
   "devDependencies": {
