--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-router": "4.2.0",
     "react-router-bootstrap": "0.24.4",
     "react-router-dom": "4.2.2",
-    "react-router-hash-link": "^1.2.0",
-    "react-scripts": "^2.1.3"
+    "react-router-hash-link": "1.2.0",
+    "react-scripts": "2.1.3"
   },
   "devDependencies": {
     "@types/react-router-dom": "4.2.6",
@@ -44,6 +44,6 @@
     "react-social-icons": "3.0.0",
     "url-loader": "0.6.2",
     "webpack": "3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "2.8.2"
   }
 }
