--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-router": "4.2.0",
     "react-router-bootstrap": "0.24.4",
     "react-router-dom": "4.2.2",
-    "react-router-hash-link": "^1.2.0",
-    "react-scripts": "^2.1.3"
+    "react-router-hash-link": "1.2.0",
+    "react-scripts": "2.1.3"
   },
   "devDependencies": {
     "@types/react-router-dom": "4.2.6",
