--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "acoelho",
   "license": "MIT",
   "dependencies": {
+    "postscribe": "2.0.8",
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-bootstrap": "0.32.1",
