--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react-router-bootstrap": "0.24.4",
     "react-router-dom": "4.2.2",
     "react-router-hash-link": "1.2.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "styled-components": "3.4.9"
   },
   "devDependencies": {
     "@types/react-router-dom": "4.2.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-styled-components": "^1.10.4",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
