--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "browser": true
   },
   "rules": {
+    "comma-dangle": ["error", "only-multiline"],
     "arrow-body-style": "off",
     "semi": [2, "never"],
     "max-len": [
