--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
+    "css-loader": "^0.28.7",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-loader": "2.0.0",
@@ -45,8 +46,9 @@
     "eslint-plugin-react": "6.10.3",
     "html-loader": "0.5.5",
     "react-social-icons": "3.0.0",
+    "style-loader": "^0.23.0",
     "url-loader": "0.6.2",
     "webpack": "3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "2.11.2"
   }
 }
